--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-navbar></app-navbar>
 <div class="container">
+    <!-- <app-book-add></app-book-add> -->
     <app-book-search></app-book-search>
-
 </div>
