--- a/src/app/book-add/book-add.component.html
+++ b/src/app/book-add/book-add.component.html
@@ -5,7 +5,7 @@
     </div>
 
     <div class="ui-g-12 ui-md-6 ui-fluid">
-        <label>Title </label>
+        <label>Book Title </label>
         <input type="text" pInputText name="title" />
     </div>
 
