--- a/src/app/book-search/book-search.component.html
+++ b/src/app/book-search/book-search.component.html
@@ -1,4 +1,4 @@
-<div class="ui-g-">
+<div class="ui-g">
 
     <div class="ui-g-12">
         <h1>Book Storage</h1>
@@ -6,9 +6,10 @@
 
     <div class="ui-g-12">
 
-        <p-table [value]="books" [paginator]="true" rows="3" [responsive]="true">
+        <p-table [value]="books" [paginator]="true" rows="5" [responsive]="true">
             <ng-template pTemplate="header">
                 <tr>
+                    <th class="t-codigo">Code</th>
                     <th class="t-title">Title</th>
                     <th class="th-subject">Subject</th>
                     <th class="th-author">Author</th>
@@ -24,23 +25,20 @@
             <ng-template pTemplate="body" let-b>
 
                 <tr>
+                    <td class="t-codigo">{{ b.id }}</td>
                     <td class="t-title">{{ b.title }}</td>
                     <td class="td-subject">{{ b.subject }}</td>
                     <td class="td-author">{{ b.author }}</td>
                     <td class="td-price">{{ b.price }}</td>
                     <td class="td-data">{{ b.publishingDate }}</td>
                     <td class="td-align">{{ b.publisher }}</td>
-                    <td>{{ b.prublisherPhone }}</td>
+                    <td class="td-subject">{{ b.publisherPhone }}</td>
                     <td class="td-email">{{ b.publisherEmail }}</td>
                 </tr>
 
             </ng-template>
 
-
-
-
         </p-table>
-
 
     </div>
 
