--- a/src/app/book-add/book-add.component.html
+++ b/src/app/book-add/book-add.component.html
@@ -1,49 +1,49 @@
 <div class="ui-g">
     <div class="ui-g-12">
         <h1>Add New Book</h1>
-
     </div>
-    <form #form="ngForm" autocomplete="off" >
 
-            <div class="ui-g-12 ui-md-6 ui-fluid">
-                <label>Title </label>
-                <input #title="ngModel" [(ngModel)]="book.title" type="text" pInputText name="title" />
-            </div>
+    <form #form="ngForm" autocomplete="off">
 
-            <div class="ui-g-12 ui-md-6 ui-fluid">
-                <label>Subject </label>
-                <input #subject="ngModel" [(ngModel)]="book.subject" type="text" pInputText name="subject" />
-            </div>
+        <div class="ui-g-12 ui-md-6 ui-fluid">
+            <label>Title </label>
+            <input #title="ngModel" [(ngModel)]="book.title" type="text" pInputText name="title" required/>
+        </div>
 
-            <div class="ui-g-12 ui-md-6 ui-fluid">
-                <label>Author </label>
-                <input #author="ngModel" [(ngModel)]="book.author" type="text" pInputText name="author" />
-            </div>
+        <div class="ui-g-12 ui-md-6 ui-fluid">
+            <label>Subject </label>
+            <input #subject="ngModel" [(ngModel)]="book.subject" type="text" pInputText name="subject" required/>
+        </div>
 
-            <div class="ui-g-12 ui-md-3 ui-fluid">
-                <label>Price </label>
-                <input #price="ngModel" [(ngModel)]="book.price" type="text" pInputText name="price" placeholder="0,00" />
-            </div>
+        <div class="ui-g-12 ui-md-6 ui-fluid">
+            <label>Author </label>
+            <input #author="ngModel" [(ngModel)]="book.author" type="text" pInputText name="author" required/>
+        </div>
 
-            <div class="ui-g-12 ui-md-3 ui-fluid">
-                <label>Publishing Date </label>
-                <p-calendar #publishingDate="ngModel" [(ngModel)]="book.publishingDate" name="publishing-date"></p-calendar>
-            </div>
+        <div class="ui-g-12 ui-md-3 ui-fluid">
+            <label>Price </label>
+            <input #price="ngModel" [(ngModel)]="book.price" type="text" pInputText name="price" placeholder="0,00" required/>
+        </div>
 
-            <div class="ui-g-12 ui-md-3 ui-fluid">
-                <label>Publisher </label>
-                <input #publisher="ngModel" [(ngModel)]="book.publisher" type="text" pInputText name="publisher" />
-            </div>
+        <div class="ui-g-12 ui-md-3 ui-fluid">
+            <label>Publishing Date </label>
+            <p-calendar #publishingDate="ngModel" [(ngModel)]="book.publishingDate" name="publishing-date"></p-calendar>
+        </div>
 
-            <div class="ui-g-12 ui-md-3 ui-fluid">
-                <label>Publishing Phone </label>
-                <p-inputMask #publisherPhone="ngModel" [(ngModel)]="book.publisherPhone" mask="(99) 99999-9999" name="publisherPhone"></p-inputMask>
-            </div>
+        <div class="ui-g-12 ui-md-3 ui-fluid">
+            <label>Publisher </label>
+            <input #publisher="ngModel" [(ngModel)]="book.publisher" type="text" pInputText name="publisher" required/>
+        </div>
 
-            <div class="ui-g-12 ui-md-3 ui-fluid">
-                <label>Publishing E-mail </label>
-                <input #publishingEmail="ngModel" [(ngModel)]="book.publisherEmail" pInputText type="email" required name="email">
-            </div>
+        <div class="ui-g-12 ui-md-3 ui-fluid">
+            <label>Publishing Phone </label>
+            <p-inputMask #publisherPhone="ngModel" [(ngModel)]="book.publisherPhone" mask="(99) 99999-9999" name="publisherPhone" required></p-inputMask>
+        </div>
+
+        <div class="ui-g-12 ui-md-3 ui-fluid">
+            <label>Publishing E-mail </label>
+            <input #publishingEmail="ngModel" [(ngModel)]="book.publisherEmail" pInputText type="email" required name="email" required>
+        </div>
 
     </form>
 
@@ -51,6 +51,6 @@
 
 <div class="ui-g">
     <div class="ui-g-12">
-        <button [disabled]="form.invalid" pButton type="submit" label="Save"  (click)="saveNewBook(form)"></button>
+        <button [disabled]="form.invalid" pButton type="submit" label="Save" (click)="saveNewBook(form)"></button>
     </div>
 </div>
