--- a/src/app/book-search/book-search.component.css
+++ b/src/app/book-search/book-search.component.css
@@ -29,17 +29,19 @@
 }
 
 .th-email {
-    width: 260px;
+    width: 200px;
     text-align: center;
 }
 
 .td-email {
-    width: 260px;
+    width: 200px;
     text-align: center;
+    font-size: 0.625rem;
+
 }
 
 .th-subject {
-    width: 120px;
+    width: 100px;
     text-align: center;
 }
 
@@ -54,7 +56,7 @@
 }
 
 .t-codigo {
-    width: 4.75rem;
+    width: 3.5rem;
     text-align: center;
 }
 
@@ -62,3 +64,8 @@
     width: 120px;
     text-align: center;
 }
+.btn__excluir {
+    text-align: center;
+}
+
+
